# BioDigitalTwin

./: .gitignore  BENCHMARK_REPORT_FAST.json  BENCHMARK_RESULTS.md  Building-a-phased-document-structure.capsule.md  CLINICAL_PROTOCOL.md  COMPANY_PITCH.md  DIGITAL_TWIN_BENCHMARK_FRAMEWORK.md  FORBES_30U30_REVIEW.md  MIMIC_IV_ACCESS.md  MODULES.md  README.md  VC_RESPONSE.md  docker-compose.registry.yml  docker-compose.yml
backend/: Dockerfile  README.md  app_main.py  requirements.txt
backend/app/: clinical_validation.py  hipaa_compliance.py  main.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.tsbuildinfo
scientific_proof/: calibration_results.json  forecasting_results.json  forecasting_table.csv  results.json  results.md  trial_results.json
scripts/: docker-push.sh  scientific_proof.py  scientific_proof.sh
services/agent-svc/: Dockerfile
services/knowledge-svc/: Dockerfile
services/narrative-svc/: Dockerfile
services/ontology-svc/: Dockerfile
services/patient-svc/: Dockerfile
services/twin-svc/: Dockerfile
shared/bio-digital-twin-core/: pyproject.toml
shared/bio-digital-twin-core/src/bio_digital_twin_core/: __init__.py  config.py  ontology.py  schemas.py
shared/bio-digital-twin-core/src/bio_digital_twin_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test_results/: forecasting_results.json  forecasting_table.csv
tests/real_world/: README.md  generate_report.py  quick_test.sh  run_all.sh  start_server.sh  test_01_engine.py  test_02_modules.py  test_03_e2e_workflow.py  (+1 more)
(+184 files in other folders)
